--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -1,2 +1,3 @@
 spring.datasource.url=jdbc:mysql://localhost/infytel-customer
 test=testing
+eureka.client.service-url.defaultZone=http://localhost:5555/eureka
